--- a/heart-trail-animation/index.html
+++ b/heart-trail-animation/index.html
@@ -7,5 +7,7 @@
     <script src="index.js"></script>
     <title>Heart trail animation</title>
   </head>
-  <body></body>
+  <body>
+    <span></span>
+  </body>
 </html>
