kod v js + barevnost srdicek

--- a/heart-trail-animation/index.html
+++ b/heart-trail-animation/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js"></script>
+
     <title>Heart trail animation</title>
   </head>
   <body>
     <span></span>
+    <script src="index.js" defer></script>
   </body>
 </html>
