js kod + vysvětleni v readme

--- a/moving-text/index.html
+++ b/moving-text/index.html
@@ -11,9 +11,7 @@
     <title>Pohyblivý text (Auto Text Effect Animation)</title>
   </head>
   <body>
-    <div class="container">
-      <h1>I am a youtuber</h1>
-    </div>
-    <script src="index.js"></script>
+    <div class="container"></div>
+    <script src="index.js" defer></script>
   </body>
 </html>
