--- a/button-ripple-effect/Index.html
+++ b/button-ripple-effect/Index.html
@@ -7,6 +7,7 @@
     <title>Button Ripple Effect</title>
   </head>
   <body>
-    <script src="Index.js"></script>
+    <a href="#" class="btn"><span>Button</span></a>
+    <script src="Index.js" defer></script>
   </body>
 </html>
