zalozeni noveho projektu prepinani na tmavy mod, html

--- a/dark-mode-toggle/index.html
+++ b/dark-mode-toggle/index.html
@@ -7,6 +7,11 @@
     <title>Dark Mode Toggle</title>
   </head>
   <body>
+    <input type="checkbox" id="dark-mode" class="input"></input>
+    <label for="dark-mode" class="label">
+      <div class="circle"></div>
+    </label>
+
     <script src="index.js"></script>
   </body>
 </html>
