--- a/dark-mode-toggle/index.html
+++ b/dark-mode-toggle/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cz">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +12,6 @@
       <div class="circle"></div>
     </label>
 
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
   </body>
 </html>
