--- a/digital-clock/index.html
+++ b/digital-clock/index.html
@@ -7,6 +7,25 @@
     <title>Digital clock</title>
   </head>
   <body>
+    <h2>Digitální hodiny</h2>
+    <div class="clock">
+      <div>
+        <span id="hour">00</span>
+        <span class="text">Hodiny</span>
+      </div>
+      <div>
+        <span id="minutes">00</span>
+        <span class="text">Minuty</span>
+      </div>
+      <div>
+        <span id="seconds">00</span>
+        <span class="text">Sekundy</span>
+      </div>
+      <div>
+        <span id="ampm">AM</span>
+      </div>
+    </div>
+
     <script src="index.js" defer></script>
   </body>
 </html>
