--- a/testimonial-slider/index.html
+++ b/testimonial-slider/index.html
@@ -7,6 +7,19 @@
     <title>Testimonial Slider</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <div class="testimonial-container">
+      <img
+        src="https://media.istockphoto.com/id/1564842629/cs/fotografie/portr%C3%A9t-atraktivn%C3%ADho-usm%C4%9Bvav%C3%A9ho-mlad%C3%A9ho-mu%C5%BEe-p%C5%99i-pohledu-na-kameru-v-parku-kavkazsk%C3%BD.jpg?s=612x612&w=0&k=20&c=gpcaIABxolY18f4lg1yNrcHz9Hv_xIHWHH5jsQ9xTTw="
+        alt="user-image"
+      />
+      <p class="text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur
+        quos amet suscipit dignissimos corrupti quibusdam ab qui fuga, nulla
+        delectus.
+      </p>
+    </div>
+    <h4 class="surname">Cherise G</h4>
+
+    <script src="index.js" defer></script>
   </body>
 </html>
