--- a/testimonial-slider/index.html
+++ b/testimonial-slider/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gidole&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Testimonial Slider</title>
   </head>
   <body>
@@ -17,8 +22,8 @@
         quos amet suscipit dignissimos corrupti quibusdam ab qui fuga, nulla
         delectus.
       </p>
+      <h4 class="username">Cherise G</h4>
     </div>
-    <h4 class="surname">Cherise G</h4>
 
     <script src="index.js" defer></script>
   </body>
