--- a/color-generator/index.html
+++ b/color-generator/index.html
@@ -7,6 +7,15 @@
     <title>Random Color Generator</title>
   </head>
   <body>
+    <h1>Random Color Generator</h1>
+    <div class="container">
+      <div class="color-container">#7652a6</div>
+      <div class="color-container">#7652a6</div>
+      <div class="color-container">#7652a6</div>
+      <div class="color-container">#7652a6</div>
+      <div class="color-container">#7652a6</div>
+      <div class="color-container">#7652a6</div>
+    </div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
