--- a/color-generator/index.html
+++ b/color-generator/index.html
@@ -8,14 +8,7 @@
   </head>
   <body>
     <h1>Random Color Generator</h1>
-    <div class="container">
-      <div class="color-container">#7652a6</div>
-      <div class="color-container">#7652a6</div>
-      <div class="color-container">#7652a6</div>
-      <div class="color-container">#7652a6</div>
-      <div class="color-container">#7652a6</div>
-      <div class="color-container">#7652a6</div>
-    </div>
+    <div class="container"></div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
