--- a/rotating-image-gallery/index.html
+++ b/rotating-image-gallery/index.html
@@ -35,8 +35,8 @@
       </span>
     </div>
     <div class="btn-container">
-      <button class="btn" id="prev">Prev</button>
-      <button class="btn" id="next">Next</button>
+      <button class="btn" id="prev">prev</button>
+      <button class="btn" id="next">next</button>
     </div>
 
     <script type="module" src="index.js"></script>
