--- a/search-bar/Index.html
+++ b/search-bar/Index.html
@@ -7,15 +7,17 @@
     <title>Animated Search Bar</title>
   </head>
   <body>
-    <div class="search-bar-container">
+    <div class="search-bar-container active">
       <img
         src="https://cdn3.iconfinder.com/data/icons/minimal-7/64/Search-512.png"
         alt="magnifier"
+        class="magnifier"
       />
       <input type="text" class="input" placeholder="Search ..." />
       <img
         src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-25-1024.png"
         alt="microfon-icon"
+        class="mic-icon"
       />
     </div>
     <script type="module" src="Index.js"></script>
