--- a/loan-calculator/Index.html
+++ b/loan-calculator/Index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Loan calculator - úvěrová kalkulačka</title>
   </head>
   <body>
-    <div>
+    <div class="container">
       <h1>Úvěrová kalkulačka</h1>
       <p>
         Částka úvěru CZ:
         <input
+          class="input"
           type="number"
           id="loan-amount"
           min="1000000"
@@ -23,6 +28,7 @@
       <p>
         Úroková sazba %:
         <input
+          class="input"
           type="number"
           id="interest-rate"
           min="3.5"
@@ -34,6 +40,7 @@
       <p>
         Doba sprácení:
         <input
+          class="input"
           type="number"
           id="months-to-pay"
           min="6"
@@ -42,7 +49,7 @@
           step="1"
         />
       </p>
-      <p>Měsíční splátka:</p>
+      <p class="payment">Měsíční splátka:</p>
     </div>
     <script type="module" src="Index.js"></script>
   </body>
