--- a/loan-calculator/Index.html
+++ b/loan-calculator/Index.html
@@ -42,14 +42,14 @@
         <input
           class="input"
           type="number"
-          id="months-to-pay"
+          id="years-to-pay"
           min="6"
-          max="72"
-          value="12"
+          max="304"
+          value="0"
           step="1"
         />
       </p>
-      <p class="payment">Měsíční splátka:</p>
+      <p class="payment" id="payment"></p>
     </div>
     <script type="module" src="Index.js"></script>
   </body>
