--- a/loan-calculator/Index.html
+++ b/loan-calculator/Index.html
@@ -38,13 +38,13 @@
         />
       </p>
       <p>
-        Doba sprácení:
+        Doba sprácení (v letech):
         <input
           class="input"
           type="number"
           id="years-to-pay"
-          min="6"
-          max="304"
+          min="5"
+          max="25"
           value="0"
           step="1"
         />
