stylovani css + javascript kod

--- a/BMI calculator/Index.html
+++ b/BMI calculator/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cz">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +14,7 @@
         type="number"
         class="input"
         id="height"
-        value="180"
+        value="165"
         placeholder="Zadejte svoji výšku v cm:"
       />
       Vaše hmotnost (kg)
@@ -22,13 +22,13 @@
         type="number"
         class="input"
         id="weight"
-        value="180"
+        value="50"
         placeholder="Zadejte svoji váhu v kg:"
       />
       <button class="btn" id="btn">Compute BMI</button>
       <input disabled type="text" class="input" id="bmi-result" />
       <h4 class="info-text">
-        Weight Condition: <span id="weight-condition"></span>
+        Vyhodnocení váhy: <span id="weight-condition"></span>
       </h4>
     </div>
     <script type="module" src="Index.js"></script>
