vymazání tlačítek z html

--- a/drum kit/index.html
+++ b/drum kit/index.html
@@ -15,12 +15,7 @@
   </head>
   <body>
     <h1>Drum kit <i class="fa-solid fa-drum"></i></h1>
-    <div class="container">
-      <button class="btn">Snare</button>
-      <button class="btn">Kick</button>
-      <button class="btn">crash</button>
-      <button class="btn">Tom</button>
-    </div>
+    <div class="container"></div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
