--- a/clock/index.html
+++ b/clock/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="index.js"></script>
     <title>Hodiny</title>
   </head>
   <body>
@@ -18,6 +20,10 @@
         <div class="minute"></div>
         <div class="second"></div>
       </div>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Logo_da_Rolex.png/2560px-Logo_da_Rolex.png"
+        alt="relax logo"
+      />
     </div>
   </body>
 </html>
