--- a/color-flipper/index.html
+++ b/color-flipper/index.html
@@ -8,6 +8,14 @@
     <title>Color Flipper</title>
   </head>
   <body>
-    <h3>Color Flipper</h3>
+    <div class="container-heading">
+      <h3>Color Flipper</h3>
+    </div>
+    <div class="container-buttons">
+      <button id="green">Green</button>
+      <button id="red">Red</button>
+      <button id="blue">Blue</button>
+      <button id="random">Random</button>
+    </div>
   </body>
 </html>
