--- a/color-flipper/index.html
+++ b/color-flipper/index.html
@@ -13,8 +13,8 @@
     </div>
     <div class="container-buttons">
       <button id="green">Green</button>
-      <button id="red">Red</button>
-      <button id="blue">Blue</button>
+      <button id="red" onclick="setColor('red')">Red</button>
+      <button id="blue" onclick="setColor('blue')">Blue</button>
       <button id="random">Random</button>
     </div>
   </body>
