--- a/generator-nahodnych-nabidek/index.html
+++ b/generator-nahodnych-nabidek/index.html
@@ -8,8 +8,10 @@
     <title>Random Quote Generator</title>
   </head>
   <body>
-    <h1>Random Quote Generator</h1>
-    <p id="quote"></p>
-    <button id="btn">Generate Quote</button>
+    <div class="container">
+      <h1>Random Quote Generator</h1>
+      <p id="quote"></p>
+      <button id="btn">Generate Quote</button>
+    </div>
   </body>
 </html>
