--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -7,5 +7,13 @@
     <script type="module" src="index.js"></script>
     <title>To do list</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>TODO List</h1>
+      <h2>Items</h2>
+      <div id="items"></div>
+      <input id="itemInput" type="text" placeholder="Napiš úkol" />
+      <button id="btn">Přidej</button>
+    </div>
+  </body>
 </html>
