--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -8,7 +8,7 @@
     <title>To do list</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-to-do">
       <h1>TODO List</h1>
       <h2>Items</h2>
       <div id="items"></div>
