--- a/more-projects-js/index.html
+++ b/more-projects-js/index.html
@@ -12,5 +12,15 @@
       <h3>Hello <span>word</span></h3>
       <button class="btn">Say Hi</button>
     </div>
+    <div class="container-modal">
+      <button id="openModal">Open Modal</button>
+      <div class="modal">
+        <div class="modal_overlay"></div>
+        <div class="modal_content">
+          <h1>Hello world'</h1>
+          <p>Klikni kdekoli na text a zavři jej!</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
