--- a/more-projects-js/index.html
+++ b/more-projects-js/index.html
@@ -3,24 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script type="module" src="index.js"></script>
-    <title>Document</title>
+    <title>Rozcesník</title>
   </head>
   <body>
-    <div class="container">
-      <h3>Hello <span>word</span></h3>
-      <button class="btn">Say Hi</button>
-    </div>
-    <div class="container-modal">
-      <button id="openModal">Open Modal</button>
-      <div class="modal">
-        <div class="modal_overlay"></div>
-        <div class="modal_content">
-          <h1>Hello world'</h1>
-          <p>Klikni kdekoli na text a zavři jej!</p>
-        </div>
-      </div>
-    </div>
+    <ul>
+      <li><a href="main.html">Hello word</a></li>
+      <li><a href="background.html">Změna barvy pozadí</a></li>
+    </ul>
   </body>
 </html>
