vlastnost (property) length

--- a/more-projects-js/background.html
+++ b/more-projects-js/background.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section id="colour-display">
-      <h1>Změna barvy pozadí<span id="current-colour"></span></h1>
+      <h1>Změna barvy pozadí<span id="current-colour">fff</span></h1>
       <button id="new-colour-button">Nová barva</button>
     </section>
   </body>
