--- a/more-projects-js/index.html
+++ b/more-projects-js/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="main.html">Hello word</a></li>
       <li><a href="background.html">Změna barvy pozadí</a></li>
+      <li><a href="test-length.html">Délka textu</a></li>
     </ul>
   </body>
 </html>
